modified:   public/styles.css 	modified:   src/Controller/NewsController.php 	modified:   src/Form/CrudType.php 	modified:   templates/news/createForm.html.twig 	modified:   templates/news/index.html.twig 	new file:   templates/news/updateForm.html.twig

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,3 +2,7 @@ code {
     background-color: transparent !important;
     /* le important est nécessaire pour overwrite Bootstrap */
 }
+
+* {
+    box-sizing: border-box;
+}
