--- a/templates/news/updateForm.html.twig
+++ b/templates/news/updateForm.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Formulaire de création d'article{% endblock %}
+{% block title %}Formulaire de mise à jour d'article{% endblock %}
 
 {% block body %}
 <div class="container">
